# ntc-cmake

./: CMakeLists.txt  LICENSE.md  README.md  ntc-checks.cmake  ntc-dev-build.cmake  ntc-target-helpers.cmake
example/: CMakeLists.txt
example/ntcexample-exe/: CMakeLists.txt
example/ntcexample-lib/: CMakeLists.txt  ntcexample-lib-config.cmake.in
example/ntcexample-lib/src/: widget.cpp
ntc-cmake/: CMakeLists.txt  ntc-cmake-config.cmake  ntc-dev-build.cmake  ntc-target-helpers.cmake
ntcexample-exe/: CMakeLists.txt
ntcexample-exe/src/: main.cpp
ntcexample-headerlib/: CMakeLists.txt  ntcexample-headerlib-config.cmake.in
ntcexample-headerlib/include/ntcexample/headerlib/: gadget.hpp
ntcexample-lib/: ntcexample-lib-config.cmake.in
ntcexample-lib/include/ntcexample/: widget.hpp
ntcexample-lib/src/: config.hpp.in
